# aegis-vault-challenge

./: .gitignore  README.md  foundry.toml  package-lock.json  package.json  pyproject.toml
aegis_challenge/: __init__.py  aegis_market.py  api.py  auth_attempts.py  cli.py  dfm.py  export_verifier.py  flow.py  leaderboard.py  limit_orders.py  market_engine_v2.py  pool.py  runner.py  sandbox.py  scoring.py  v4_math.py  vault.py  web.py  web_app.py  web_server.py
benchmarks/: 01_directional_long_eth.py  02_directional_short_eth.py  03_passive_wide_lp.py  04_passive_narrow_lp.py  05_lo_only_rebalancer.py  06_borrow_heavy.py  07_delta_neutral_heuristic.py
docs/: README.md  development.md  participant-guide.md  simulation-and-scoring.md  strategy-api.md  x-auth-attempts.md
examples/: 00_hold_idle.py  01_basic_delta_neutral_cl.py  02_limit_order_rebalancer.py  README.md  starter_strategy.py
goal-prompts/: base-realism-hardening-goal.md  base-realism-hardening-reference.md  delta-neutral-hardening-reference.md  docs-academy-goal.md  docs-academy-reference.md  market-engine-v2-goal.md  market-engine-v2-reference.md  usdc-eth-money-first-goal.md  usdc-eth-money-first-reference.md  x-auth-attempts-goal.md  x-auth-attempts-reference.md  x-share-modal-reference.md
reports/: apr-display-review.json  apr-display-review.md  apr-live-update-fix.json  apr-live-update-fix.md  base-realism-hardening.json  base-realism-hardening.md  base-realism-independent-review.json  base-realism-independent-review.md  delta-neutral-hardening-review.json  delta-neutral-hardening-review.md  (+24 more)
(+77 files in other folders)
